Finagle some styles on the greenfield playlist view collapsing to correctly show waveform and track content on mobile

--- a/app/assets/stylesheets/white_theme/layout.scss
+++ b/app/assets/stylesheets/white_theme/layout.scss
@@ -23,15 +23,24 @@ body {
         min-width: 300px;
         width: 35%;
         margin-right: $baseline;
+        @media only screen and (max-width: 850px) { // The point where the playlist has to drop to one column
+          width: 100%;
+          margin-right: 0;
+          margin-bottom: $baseline;
+        }
       }
       .track-content {
         width: auto;
-        // margin-left: $baseline;
         max-width: 700px;
         margin-left: 0;
         margin-right: 0;
         @media #{$mobile} {
           margin-left: auto;
+          min-width: 100px;
+        }
+        @media only screen and (max-width: 850px) { // The point where the playlist has to drop to one column
+          width: 100%;
+
         }
         flex: 1;
       }      
