--- a/app/assets/stylesheets/white_theme/playlist.scss
+++ b/app/assets/stylesheets/white_theme/playlist.scss
@@ -37,7 +37,7 @@
     color: $not-quite-black;
   }
   ul.tracklist {
-    margin-top: $baseline;
+    margin-top: $baseline / 2;
     li {
       clear: both;
       overflow: auto;
